# manipulation_project

get_cube_pose/: CMakeLists.txt  package.xml
get_cube_pose/launch/: get_pose_client.launch.py  get_pose_client_real.launch.py
get_cube_pose/src/: get_pose_client.cpp
moveit_scripts/: CMakeLists.txt  package.xml
moveit_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py
moveit_scripts/src/: pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_real.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  name.ros2_control.xacro  name.srdf  name.urdf.xacro
my_moveit_config/launch/: move_group.launch.py
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: moveit_controllers.yaml  name.srdf
real_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
